--- a/hemp-protein-vs-whey-proteins.html
+++ b/hemp-protein-vs-whey-proteins.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Times of Hemp</h1>
+        <h1>Hemp Protein vs. Whey Proteins: Which One is Best?</h1>
     </header>
 
     <main>
